--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,4 +1,5 @@
 // @import 'abstracts/';
+@import 'abstracts/variables';
 
 // @import 'vendors/';
 
@@ -6,6 +7,7 @@
 @import 'base/globals';
 
 // @import 'layout/';
+@import 'layout/header';
 
 // @import 'components/';
 
