--- a/app/scss/base/_globals.scss
+++ b/app/scss/base/_globals.scss
@@ -2,8 +2,15 @@ html {
   box-sizing: border-box;
 }
 
-*,*::after,*::before{
+*,
+*::after,
+*::before {
   box-sizing: inherit;
   margin: 0;
   padding: 0;
+}
+
+body{
+  background: #222;
+  color: #ccc;
 }
