--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -2,8 +2,35 @@
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
-  border: 1px solid red;
-  padding: 1rem;
+  padding-inline: 1rem;
   width: 100%;
   height: $headerHeight;
+  font-family: 'Roboto Slab', sans-serif;
+  padding-top: 8px;
+  padding-bottom: 8px;
+
+  &__logo{
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__nav{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+
+    width: 50%;
+    font-weight: 200;
+    font-size: 24px;
+
+    &-element{
+      &:hover {
+          cursor: pointer;
+          text-decoration: underline;
+        }
+    }
+  }
 }
