--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -11,6 +11,8 @@
 @import 'layout/main';
 
 // @import 'components/';
+@import 'components/canvas';
+@import 'components/textCard';
 
 // @import 'pages/';
 
