--- a/app/scss/layout/_main.scss
+++ b/app/scss/layout/_main.scss
@@ -1,17 +1,15 @@
 .main{
   display: flex;
   flex-flow: row nowrap;
-  border: 1px solid green;
   width: 100%;
   height: $mainHeight;
   
   &__left{
-    border: 1px solid green;
     width: 60%;
+    position: relative;
   }
 
   &__right{
-    border: 1px solid green;
     width: 40%;
   } 
 }
