finished naming convention

--- a/app/scss/abstracts/_variables.scss
+++ b/app/scss/abstracts/_variables.scss
@@ -3,3 +3,8 @@
 $headerHeight: calc(100vh - 90vh);
 $mainHeight: calc(100vh - $headerHeight);
 $textCardHeight: calc($mainHeight - 50vh);
+
+
+///colors;
+
+$mono-green: #586E5E; 
