--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,5 +1,6 @@
 // @import 'abstracts/';
 @import 'abstracts/variables';
+@import 'abstracts/animations';
 
 // @import 'vendors/';
 
@@ -13,6 +14,7 @@
 // @import 'components/';
 @import 'components/canvas';
 @import 'components/textCard';
+@import 'components/deviderLine';
 
 // @import 'pages/';
 
