color system for rarities, finished planet sizes

--- a/app/scss/abstracts/_variables.scss
+++ b/app/scss/abstracts/_variables.scss
@@ -8,3 +8,11 @@ $textCardHeight: calc($mainHeight - 50vh);
 ///colors;
 
 $mono-green: #586E5E; 
+
+//rarities
+
+$common: #68AD62;
+$uncommon: #5A8EC4;
+$legendary: #9582AD;
+$rare: #AD5350;
+$unique: #E6CD22;
