--- a/app/scss/layout/_main.scss
+++ b/app/scss/layout/_main.scss
@@ -18,7 +18,7 @@
       width: 100%;
       text-align: center;
       margin-top: 4rem;
-      margin-bottom: 6rem;
+      margin-bottom: 9rem;
       text-decoration: underline;
     }
 
@@ -31,6 +31,11 @@
       &-title{
         font-weight: 300;
         margin-bottom: 1rem;
+      }
+
+      &-title > span {
+        margin-left: 1rem;
+        color: #eee;
       }
     }
   } 
