--- a/app/scss/abstracts/_variables.scss
+++ b/app/scss/abstracts/_variables.scss
@@ -15,6 +15,6 @@ $mono-green: #586E5E;
   --uncommon: #5A8EC4;
   --legendary: #9582AD;
   --rare: #b14d4a;
-  --unique: #E6CD22;
+  --unique: k,l;
 }
 
