--- a/app/scss/abstracts/_variables.scss
+++ b/app/scss/abstracts/_variables.scss
@@ -2,7 +2,7 @@
 
 $headerHeight: calc(100vh - 90vh);
 $mainHeight: calc(100vh - $headerHeight);
-$textCardHeight: calc($mainHeight - 50vh);
+$textCardHeight: calc($mainHeight - 60vh);
 
 
 ///colors;
@@ -15,6 +15,6 @@ $mono-green: #586E5E;
   --uncommon: #5A8EC4;
   --legendary: #9582AD;
   --rare: #b14d4a;
-  --unique: k,l;
+  --unique: #E6CD22;
 }
 
