--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -13,6 +13,9 @@
     flex-flow: row;
     align-items: center;
     justify-content: center;
+    &-title{
+      font-size: 24px;
+    }
   }
 
   &__nav{
@@ -23,7 +26,7 @@
 
     width: 50%;
     font-weight: 200;
-    font-size: 24px;
+    font-size: 18px;
 
     &-element{
       &:hover {
