--- a/app/scss/components/_deviderline.scss
+++ b/app/scss/components/_deviderline.scss
@@ -7,7 +7,7 @@
 
 .deviderLine2{
   width: 1px;
-  height: calc($mainHeight - 20vh);
+  height: calc($sectionHeight - 20vh);
   display: flex;
   align-self: flex-end;
   background-color: #aaa;
