--- a/app/scss/base/_globals.scss
+++ b/app/scss/base/_globals.scss
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -14,4 +15,9 @@ body{
   background: #222;
   color: #ccc;
   font-family: 'Roboto Slab', sans-serif;
+}
+
+a{
+  text-decoration: none;
+  color: inherit;
 }
