--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -10,6 +10,7 @@
 // @import 'layout/';
 @import 'layout/header';
 @import 'layout/main';
+@import 'layout/advanced';
 
 // @import 'components/';
 @import 'components/canvas';
