--- a/app/scss/layout/_main.scss
+++ b/app/scss/layout/_main.scss
@@ -5,6 +5,8 @@
   width: 100%;
   height: $sectionHeight;
 
+  border-bottom: 1px solid #ccc;
+
   &__left{
     width: 60%;
     position: relative;
