--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -16,6 +16,7 @@
 @import 'components/canvas';
 @import 'components/textCard';
 @import 'components/deviderLine';
+@import 'components/oc';
 
 // @import 'pages/';
 
