--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,5 +1,6 @@
 // @import 'abstracts/';
 @import 'abstracts/variables';
+@import 'abstracts/mixins';
 @import 'abstracts/animations';
 
 // @import 'vendors/';
@@ -16,7 +17,7 @@
 @import 'components/canvas';
 @import 'components/textCard';
 @import 'components/deviderLine';
-@import 'components/oc';
+@import 'components/characteristics';
 
 // @import 'pages/';
 
