we design tomorrow

--- a/app/scss/components/_canvas.scss
+++ b/app/scss/components/_canvas.scss
@@ -2,4 +2,7 @@
   width: 100%;
   height: $sectionHeight;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
