added blog section

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -12,6 +12,7 @@
 @import 'layout/header';
 @import 'layout/main';
 @import 'layout/advanced';
+@import 'layout/blog';
 
 // @import 'components/';
 @import 'components/canvas';
